# fastapi_ecommerce

./: .gitignore  alembic.ini  pyproject.toml
app/: main.py
app/backend/: db.py
app/beckend/: db.py
app/migrations/: env.py
app/migrations/versions/: 4d6e01e7e1b5_model_rating_and_feedback.py  5a7d770dd928_supplier_id.py  68a1a6a568bf_create_model_user.py  8d4caccc0242_init_migrate.py  a543b8f828ed_initial_migration.py  bdc1d83b7d6d_initial_migration.py
app/models/: __init__.py  category.py  feedback.py  product.py  rating.py  users.py
app/routers/: auth.py  category.py  permission.py  products.py  review.py
app/schemas/: __init__.py  category.py  feedbacks.py  product.py  rating.py  users.py
